--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,8 @@
     <color name="colorDivider">#E0E0E0</color>
     <color name="colorDeepText">#767676</color>
 
+    <color name="colorTextBlue">#4285F4</color>
+
     <color name="colorSelected">#EEEEEE</color>
 
     <color name="colorTextBlack">#222222</color>
