--- a/app/src/main/res/layout/layout_email_item.xml
+++ b/app/src/main/res/layout/layout_email_item.xml
@@ -41,7 +41,7 @@
                 android:ellipsize="end"
                 android:fontFamily="sans-serif-light"
                 android:gravity="center_vertical"
-                android:singleLine="true"
+                android:maxLines="1"
                 tools:text="123456@qq.com"
                 android:textColor="@color/colorTextBlack" />
 
