change the toolbar menu

--- a/app/src/main/res/menu/menu_action.xml
+++ b/app/src/main/res/menu/menu_action.xml
@@ -13,6 +13,12 @@
         android:icon="@drawable/icon_action_menu_read"
         android:title="已读"
         app:showAsAction="always" />
+    <item
+        android:id="@+id/action_unread"
+        android:icon="@drawable/icon_action_menu_unread"
+        android:title="未读"
+        app:showAsAction="always"
+        android:visible="false"/>
 
 
 
