--- a/app/src/main/res/layout/activity_send.xml
+++ b/app/src/main/res/layout/activity_send.xml
@@ -38,7 +38,7 @@
                     android:layout_height="?actionBarSize"
                     android:background="?colorPrimary"
                     android:translationZ="2dp"
-                    app:title="写邮件"></android.support.v7.widget.Toolbar>
+                    app:title="写邮件"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -66,6 +66,7 @@
                             android:textColor="@color/colorTextGrey" />
 
                         <EditText
+                            android:id="@+id/send_from"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="3"
