--- a/app/src/main/res/menu/menu_send.xml
+++ b/app/src/main/res/menu/menu_send.xml
@@ -8,6 +8,12 @@
         android:title="发送"
         app:showAsAction="always" />
 
+    <item
+        android:id="@+id/action_save"
+        android:icon="@drawable/icon_action_menu_save"
+        android:title="保存草稿"
+        app:showAsAction="always" />
+
 
 
 </menu>
