--- a/app/src/main/res/layout/activity_sign.xml
+++ b/app/src/main/res/layout/activity_sign.xml
@@ -52,7 +52,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/shape_sign_edit"
-                    android:drawableStart="@drawable/icon_sign_username"
+                    android:drawableStart="@drawable/icon_sign_email"
                     android:text="@={user.email}"
                     android:hint="@string/emailHint"
                     android:inputType="textEmailAddress"
@@ -125,6 +125,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
                     android:gravity="end"
+                    android:textColor="@color/colorTheme"
                     android:text="→点此注册"/>
 
             </LinearLayout>
